--- a/package.json
+++ b/package.json
@@ -1,15 +1,33 @@
 {
+  "files": ["lib/**/*"],
   "name": "css-classes-helper",
   "version": "0.1.1",
   "description": "A function/macro to get the css properties from a css class",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
+    "lint": "tslint -p tsconfig.json",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    "prepare": "npm run build",
+    "version": "npm run format && git add -A",
+    "postversion": "git push && git push --tags"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/santimedia01/css-classes-helper"
   },
+  "bugs": {
+    "url": "https://github.com/santimedia01/css-classes-helper/issues"
+  },
+  "homepage": "https://github.com/santimedia01/css-classes-helper#readme",
   "author": "santiagomediabilla@gmail.com",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "prettier": "^2.6.2",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^4.6.3"
+  }
 }
